--- a/my_many_pets.html
+++ b/my_many_pets.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Michael's favorite things</title>
+  <title>Dogs Oh dogs!</title>
 </head>
 <body>
-  <h1>My favorite things</h1>
-  <h2>These are a few of my favorite things.</h2>
-
-  <h3>People</h3>
-  <p>Here are some of my favorite people!</p>
+  <h1><strong>Oh so many dogs!</strong></h1>
+  <h2>Piper's Favorite toys</h2>
   <ul>
-    <li>My brother Christopher</li>
-    <li>My mom and dad:
-      <ul>
-        <li>Steve</li>
-        <li>Carol</li>
-      </ul>
-    </li>
-    <li>My friend Jessica</li>
-    <li>My friend Candy</li>
+    <li>Bones</li>
+    <li>Hedgehog</li>
   </ul>
 
-  <h3>Flavors of ice cream</h3>
-  <p>These are my three favorites, in order:</p>
-  <ol>
-    <li>Pistachio</li>
-    <li>Malted milk chocolate</li>
-    <li>Black licorice (really!)</li>
-  </ol>
+  <h2>Jack's Favorite toys</h2>
+  <ul>
+    <li>Bones</li>
+    <li>Wishbones</li>
+  </ul>
 
-  <p>Thanks for reading about me!</p>
+  <h2>Neddy's Favorite toys</h2>
+  <ul>
+    <li>Stuffless animals</li>
+    <li>Hedgehog</li>
+    <li>Kong bone</li>
+  </ul>
+  
+  <p>This is my first web page!</p>
+  <p>Isn't it nice?</p>
 </body>
 </html>
